# pycoocut

./: CHANGELOG.md  LICENSE  README.md  cookiecutter.json  noxfile.py  pyproject.toml
.github/workflows/: lint-and-test.yml  publish.yml  releaseplease.yml  releaseplease_stage1.yml  releaseplease_stage2.yml  test-cutter.yml  test.yml
citemplate/: __init__.py  __main__.py  main.py
hooks/: post_gen_project.py
tests/: test_cutter.py  test_main.py
{{ cookiecutter.project_slug }}/: README.md  noxfile.py  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: lint-and-test.yml  publish.yml  releaseplease.yml  test.yml
{{ cookiecutter.project_slug }}/src/: __init__.py  __main__.py
{{ cookiecutter.project_slug }}/src/cli/: main.py
{{ cookiecutter.project_slug }}/tests/: test_main.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __main__.py  main.py
