[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.initial_version}}"
description = "{{cookiecutter.project_name}}"
authors = ["{{cookiecutter.author}}"]
readme = "README.md"
{% if cookiecutter.project_layout == "src" -%}
packages = [{ include = "src" }]
{%- endif %}

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_dep }}"
click = "^8.1.7"

[tool.poetry.scripts]
{% if cookiecutter.project_layout == "src" -%}
{{ cookiecutter.cli_command }} = "src.cli.main:main"
{%- else -%}
{{ cookiecutter.cli_command }} = "{{ cookiecutter.project_slug }}.main:main"
{%- endif %}

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
mypy = "^1.5.1"
black = "^23.9.1"
ruff = "^0.0.292"
nox = "^2023.4.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["ALL"]
# select = ["E", "F"]
ignore = ["D211", "D213", "ANN101", "INP001"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.extend-per-file-ignores]
"**/tests/**/*.py" = ["D", "ANN", "S101"]
"noxfile.py" = ["ALL"]


[tool.pytest.ini_options]
pythonpath = "{{cookiecutter.project_slug}}"
addopts = "-rA -q"
testpaths = ["tests"]
